tests/spec/compile-pass/033_integer_conversions.zn
// category: compile-pass
// stage: mvp
// milestone: M3
// profile: freestanding
// purpose: integer conversions distinguish lossless, checked, truncating, and saturating forms

module tests.pass.integerConversions;

fn widen(byte: U8) -> U32 {
    return byte as U32;
}

fn checkedNarrow(value: U32) -> Option<U8> {
    return U8.fromChecked(value);
}

fn truncateLowByte(value: U32) -> U8 {
    return U8.truncate(value);
}

fn saturateToByte(value: U32) -> U8 {
    return U8.saturate(value);
}

fn saturateSignedToByte(value: I32) -> U8 {
    return U8.saturate(value);
}
